--- a/composer.json
+++ b/composer.json
@@ -16,9 +16,11 @@
     	"php": ">=5.3.0",
     	"mouf/html.utils.weblibrarymanager": ">=2.0-dev,<3.0"
     },
-    "mouf": {
-    	"install": {
-    		"install.php":"file"
-    	}
-    }    
+    "extra": {
+	    "mouf": {
+	    	"install": {
+	    		"install.php":"file"
+	    	}
+	    }
+	}
 }
