add minmum stability

--- a/composer.json
+++ b/composer.json
@@ -16,6 +16,7 @@
     	"php": ">=5.3.0",
     	"mouf/html.utils.weblibrarymanager": ">=2.0-dev,<3.0"
     },
+    "minimum-stability": "dev",
     "extra": {
 	    "mouf": {
 	    	"install": {
