--- a/composer.json
+++ b/composer.json
@@ -19,10 +19,10 @@
     "minimum-stability": "dev",
     "extra": {
 	    "mouf": {
-	    	"install": {
+	    	"install": [{
 	    		"type" : "file",
 	    		"file" : "install.php"
-	    	}
+	    	}]
 	    }
 	}
 }
