--- a/composer.json
+++ b/composer.json
@@ -16,6 +16,9 @@
     	"php": ">=7.1",
     	"mouf/html.utils.weblibrarymanager": "^4.0"
     },
+    "conflict": {
+        "mouf/mouf": "~2.0.0"
+    },
     "autoload": {
         "psr-4": {
             "Mouf\\Javascript\\JQuery\\": "src/"
